more basic scaffolding

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,20 @@
 
 
     <script src="./components/phaser/build/phaser.js"></script>
+    <script src="./js/boot.js"></script>
+    <script src="./js/preload.js"></script>
+    <script src="./js/menu.js"></script>
+    <script src="./js/level1.js"></script>
     <script src="./js/main.js"></script>
 </head>
 <body>
-<h1>Android Rescue</h1>
-<div id="game"></div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <h1>Asteroid Rescue</h1>
+            <div id="game"></div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
