--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Android Rescue</title>
 </head>
 <body>
-<h1>Android Rescue</h1>
+<h1>Asteroid Rescue</h1>
 <a href="./src/">Click Here</a>
 </body>
 </html>
