--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;URL=./src/">
     <title>Android Rescue</title>
 </head>
 <body>
 <h1>Asteroid Rescue</h1>
-<a href="./src/">Click Here</a>
+<a href="./src/">Demo</a>
 </body>
 </html>
