--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
     <div class="row">
         <div class="col-md-12">
             <h1>Asteroid Rescue</h1>
+            <p> Use the arrow keys</p>
             <div id="game"></div>
         </div>
     </div>
