* ship is now a subclass of sprite * ship shows up on menu page

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,11 @@
     <script src="./js/preload.js"></script>
     <script src="./js/menu.js"></script>
     <script src="./js/level1.js"></script>
+
+    <script src="./js/ship.js"></script>
+
+
+
     <script src="./js/main.js"></script>
 </head>
 <body>
