--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
     <script src="./js/boot.js"></script>
     <script src="./js/preload.js"></script>
     <script src="./js/menu.js"></script>
+    <script src="./js/how-to.js"></script>
+    <script src="./js/credits.js"></script>
     <script src="./js/level1.js"></script>
 
     <script src="./js/ship.js"></script>
