--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
     <script src="./js/credits.js"></script>
     <script src="./js/level1.js"></script>
     <script src="./js/ship.js"></script>
+    <script src="./js/victory.js"></script>
 
     <script src="./js/main.js"></script>
 </head>
